resources/rest-api-demo/kustomize/overlays/pod/deployment-back-end-v1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: service-b
    version: v1
    app.kubernetes.io/component: service-b
    app.kubernetes.io/instance: service-b
    app.kubernetes.io/name: service-b
    app.kubernetes.io/part-of: app
    app.openshift.io/runtime: quarkus
  name: service-b-v1
  namespace: ossm-restapi
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: service-b
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: service-b
        deployment: service-b
        version: "v1"
    spec:
      containers:
      - env:
        - name: SERVICE_LOCAL
          value: service-b-v1
        - name: SERVICE_REMOTE
          value: service-a
        image: quay.io/llevy/service-b:v1
        ports:
        - containerPort: 8080
        imagePullPolicy: Always
        name: service-b
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        livenessProbe:
          httpGet:
            path: /docs
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /docs
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 5
          timeoutSeconds: 3
          failureThreshold: 3
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
