resources/rest-api-demo/kustomize/overlays/pod/service-b-versions.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-b-v1
  namespace: ossm-restapi
spec:
  selector:
    app: service-b
    version: v1
  ports:
    - port: 8080
      targetPort: 8080
      name: http
---
apiVersion: v1
kind: Service
metadata:
  name: service-b-v2
  namespace: ossm-restapi
spec:
  selector:
    app: service-b
    version: v2
  ports:
    - port: 8080
      targetPort: 8080
      name: http
