resources/rest-api-demo/kustomize/overlays/pod/canary-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: service-b-canary
  namespace: ossm-restapi
spec:
  parentRefs:
    - kind: Service
      group: ""
      name: service-b
      port: 8080
  rules:
    - backendRefs:
        - name: service-b-v1
          port: 8080
          weight: 90
        - name: service-b-v2
          port: 8080
          weight: 10
